# predictive-maintenance

./: .gitignore  README.md  config.yaml  main.ipynb  pyproject.toml
notebooks/: 01_eda.ipynb
src/data_pipeline/ingestion/: upload_to_blob.py
src/data_pipeline/storage/: tables.sql
src/utils/: exceptions.py  logger.py  secrets.py
