[project]
name = "predictive-maintenance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-storage-blob>=12.26.0",
    "black>=25.9.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "seaborn>=0.13.2",
]
